agregue nuevas carpetas y archivos y cree base de hmtl y js de descuentos

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@ Aprende a trabajar con matemáticas usando código javaScript en
 <a href="./salarios.html">Análisis salarial</a>
 </li>
 </ul>
-<script src="./main.js"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
