--- a/math.html
+++ b/math.html
@@ -10,6 +10,6 @@
 <p>
 Por favor, abre la consola del inspector de elementos
 </p>
-<script src="./math.js"></script>
+<script src="./js/math.js"></script>
 </body>
 </html>
