analisis salarial con la mediana

--- a/salarios.html
+++ b/salarios.html
@@ -10,7 +10,8 @@
 <p>
 Por favor, abre la consola del inspector de elementos
 </p>
-<script src="./js/plazimath.js"></script>
-<script src="./js/salarios.js"></script>
+<script src="js/plazimath.js"></script>
+<script src="js/salarios.js"></script>
+<script src="js/analisis.js"></script>
 </body>
 </html>
